--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --fix",
     "format": "prettier --write \"**/*.{js,ts,tsx,md}\"",
     "test": "jest --watchAll",
     "test:ci": "jest --ci",
@@ -46,6 +46,6 @@
     "prettier": "^2.7.1",
     "ts-jest": "29.0.5",
     "tsconfig-paths-webpack-plugin": "4.0.1",
-    "typescript": "^5"
+    "typescript": "5.5.0"
   }
 }
