--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@storybook/react": "^6.4.13",
     "@storybook/theming": "^6.4.13",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "15.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
