--- a/src/assets/fontello/config.json
+++ b/src/assets/fontello/config.json
@@ -349,6 +349,18 @@
       "css": "trash-empty",
       "code": 59419,
       "src": "fontawesome"
+    },
+    {
+      "uid": "567e3e257f2cc8fba2c12bf691c9f2d8",
+      "css": "moon",
+      "code": 61830,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "ivmsk67zo1yb1tthd3ugi4xnb3get418",
+      "css": "sun",
+      "code": 950554,
+      "src": "typicons"
     }
   ]
 }
